--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <link rel="apple-touch-icon" href="<%= BASE_URL %>apple-touch-icon.png">
     <link rel="apple-touch-icon" sizes="180x180" href="<%= BASE_URL %>apple-touch-icon-180x180.png">
     <meta name="keywords" content="swift,iOS,macOS,conference">
-    <meta property="og:url" content="https://atswift.swift.gg">
+    <meta property="og:url" content="https://atswift2018.swiftgg.team/">
     <title>2018@Swift</title>
   </head>
   <body>
